--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,1 +1,7 @@
 noarch_platforms: win_64
+github:
+  branch_name: main
+  tooling_branch_name: main
+conda_build:
+  error_overlinking: true
+conda_forge_output_validation: true
